syntax = "proto3";

option csharp_namespace = "HorrorVillains.Api.Features.Greeter.V1";
import "google/api/annotations.proto";                      

package horrorvillains.api.features.greeter.v1;

// The greeting service definition.
service GreeterService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply){
    option (google.api.http) = {
      get: "/v1/greeter/{name}"
    };
  }
}

// The request message containing the user's name.
message HelloRequest {
  // Name to say hello to
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  
  string message = 1;// Hello Reply Message
}
